# trading-copilot

./: .env.example  .gitignore  CLAUDE.md  RUNBOOKS.md  config.yaml  pyproject.toml  trading-copilot.service
scripts/: backfill_prices.py  prepare_fnspid.py  prepare_kaggle_macro.py  prepare_multisource.py  run_backtest.py  train_embedder.py  train_ensemble.py  train_ml.py
tests/: test_positions.py  test_signals.py
trading_copilot/: config.py  scheduler.py
trading_copilot/api/: webhook.py
trading_copilot/backtest/: engine.py  metrics.py
trading_copilot/data/: intraday.py  news.py  tiingo.py  universe.py
trading_copilot/news/: breaking.py  rss.py
trading_copilot/notifications/: charts.py  ntfy.py
trading_copilot/sentiment/: embedder.py  tagger.py
trading_copilot/signals/: ensemble.py  rules.py  scorer.py
trading_copilot/signals/ml/: features.py  predictor.py  trainer.py
trading_copilot/tracker/: journal.py  models.py  positions.py
