[project]
name = "trading-copilot"
version = "0.1.0"
description = "Swing trading assistant with signals, notifications, and position tracking"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=0.10.0",
    "sqlmodel>=0.0.16",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "mplfinance>=0.12.10b0",
    "matplotlib>=3.8.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "apscheduler>=3.10.4",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "yfinance>=1.3.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "pyarrow>=15.0.0",
]
sentiment = [
    "sentence-transformers>=2.7.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
trading-copilot = "trading_copilot.scheduler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
